correct link behavior (open in new tab), link purecss for responsive grids on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,7 +35,7 @@ a:hover {
 }
 
 #tour-modal {
-  padding-top: 8em;
+  padding-top: 10em;
   position: fixed;
   left: 0em;
   top: 0em;
